--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,17 @@
 </head>
 <body>
     <h1>Welcome to my portfolio</h1>
+
+    <h2>Here my projects</h2>
+
+    <ul>
+        <li>Predict Stock Market (Machine Learning) - Random Forest</li>
+        <li>Monitoring Funds' Performance</li>
+        <li>Porfolio Management</li>
+        <li>Rebalancement Portefeuille</li>
+        <li>Application Optimisation (cours prog)</li>
+        <li>Apply Algorimth Strategy</li>
+
+    </ul>
 </body>
 </html>
