--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,13 @@
 <body>
     <h1>Welcome to my portfolio</h1>
 
-    <a href="https://github.com/emiledrolet/portfolio", target="_blank">Github Website</a>
+    <a href="https://github.com/emiledrolet/portfolio", target="_blank">Github Website pour voir code</a>
 
     <h2>Personal projects</h2>
     <ul>
         <li><a href={{url_for("web_scraping")}}>Web Scraping</a></li>
         <li><a href={{url_for("company_analysis")}}>Company Analysis</a></li>
+        <li>Suivi Performance d'un Portefeuille</li>
     </ul>
 
     <h2>Corporate projects</h2>
