Add External Css file

--- a/templates/company_analysis.html
+++ b/templates/company_analysis.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Company Analysis</title>
+    <link rel="stylesheet" href="static/style.css" />
 </head>
 <body>
     <h1>Here somes company analysis</h1>
 
-    <h2 style="background: yellow"><u>Paypal</u></h2>
+    <h2 class="title""><u>Paypal</u></h2>
 
 
     <embed src="static/Company Analysis/Paypal - Personnel/Rapport Paypal.pdf" width="800px" height="1100px" />
@@ -15,7 +16,7 @@
 
 
 
-    <h2 style="background: yellow"><u>Cascades</u></h2>
+    <h2 class="title"><u>Cascades</u></h2>
 
     <embed src="static/Company Analysis/Cascades - École/Rapport Cascades.pdf" width="800px" height="1100px" />
 <!--    <embed src="tatic/Company Analysis/Cascades - École/Excel -Cascades.htm" width="800px" height="1100px" />-->
