--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="static/style.css" />
 </head>
 <body>
     <h1>Welcome to my portfolio</h1>
@@ -33,6 +34,7 @@
         <li>Rebalancement Portefeuille</li>
         <li>Application Optimisation (cours prog)</li>
         <li>Apply Algorimth Strategy</li>
+        <li>Computer Vision</li>
     </ul>
 
 
