--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,22 @@
     <link rel="stylesheet" href="static/style.css" />
 </head>
 <body>
-    <h1>Welcome to my portfolio</h1>
+
+    <div id="__cssPicker__root">
+      <p
+        class="text-4xl mt-8 text-center font-bold leading-snug tracking-tight text-white lg:text-5xl lg:leading-tight xl:text-[4rem] xl:leading-tight dark:text-white"
+        style="background-color: rgb(15, 1, 71);"
+      >
+        Welcome to my portfolio
+      </p>
+    </div>
+
+    <br>
+    <br>
 
     <a href="https://github.com/emiledrolet/portfolio", target="_blank">Github Website pour voir code</a>
+    <br>
+    <br>
 
     <h2>Personal projects</h2>
     <ul>
