initialisation du projet suivi perf pf

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     <ul>
         <li><a href={{url_for("web_scraping")}}>Web Scraping</a></li>
         <li><a href={{url_for("company_analysis")}}>Company Analysis</a></li>
-        <li>Suivi Performance d'un Portefeuille</li>
+        <li>Suivi Performance d'un Portefeuille (EN COURS)</li>
     </ul>
 
     <h2>Corporate projects</h2>
